# Chuck-App

./: .gitignore  pyproject.toml
BuildScript/: CMakeLists.txt
BuildScript/cmake/: gcc-arm-none-eabi.cmake
SystemApp/: pyproject.toml
SystemApp/src/app/: ConsoleUI.py  Pixmap.py  StartStopUI.py
SystemApp/src/core/: Core.py
src/app/: ConsoleUI.py  QLed.py  StartStopUI.py  TableUI.py  main.py
src/chuck_norris/: database.py
src/core/: Core.py  Observer.py
src/driver/: DataBase.py
tests/: test_basic.py  test_database.py
