[tool.poetry]
name = "chuck-norris"
version = "0.1.0"
description = ""
authors = ["MoriokaReimen <kei.nakata.job@gmail.com>"]
readme = "README.md"
packages = [{include = "chuck_norris", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.tool.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project"
